add mongo authentication

--- a/api/Settings.toml
+++ b/api/Settings.toml
@@ -1,4 +1,5 @@
 mongo_hosts="mongo:27018"
 name="kyle"
-# mongo_user="mongoU"
-# mongo_password="password"
+#mongo_user="mongoU"
+#mongo_password="password"
+#mongo_database="wisard"
