--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - 'mongo'
     environment:
       - 'MONGO_HOST=mongo:27017'
+      - 'MONGO_DB=wisard'
+      - 'MONGO_USER=mongoU'
+      - 'MONGO_PASSWORD=password'
   web:
     container_name: 'web'
     image: 'nginx:latest'
@@ -26,3 +29,8 @@ services:
     container_name: 'mongo'
     ports:
       - 27100:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=mongoU
+      - MONGO_INITDB_ROOT_PASSWORD=password
+    volumes:
+      - ./mongo:/docker-entrypoint-initdb.d
